*Add Create Video Battle button to top left of Open Battles tab so it is quick for users to set up video battles. Change Create Video Battle Link to be a red button so it's visible. *Date picker modified a bit. Now no need to select the date again for changing time. *Do not display a confirmation dialog when a user accepts a challenge. It is not needed in this case. *"Can't add this file" alert should display "You can only upload videos". Maybe we can show the allowed extensions within the battle card before a video is uploaded? *Show competitor battle cards but not their videos until voting starts. This should elicit more excitement to competitors and watchers/voters. *Simplify Video Battles by changing AcceptanceLastDate to VotingStartDate. This will make it easier for the users to grasp. We can have a hint displayed on the page that videos can no longer be submitted when voting starts.

--- a/Nop.Plugin.Widgets.mobSocial/Content/mobSocial/mobSocial.css
+++ b/Nop.Plugin.Widgets.mobSocial/Content/mobSocial/mobSocial.css
@@ -854,6 +854,17 @@ h1.battle-page-heading {
     color: #5C5B5B;
 
 }
+.c2a-maroon {
+        background-color: maroon;
+    color: white;
+    padding: 10px;
+    text-transform: uppercase;
+}
+.c2a-maroon:hover {
+    text-decoration: none;
+    color: white;
+}
+
 /*** OVERRIDE NOPCOMMERCE STYLES ***/
 /*Fix Overflows*/
 .master-wrapper-main .center-3 { overflow:visible; }
